force-app/main/default/objects/Question_Log__c/Question_Log__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT - An object that represents a question that a project team member has about a request.</description>
    <label>Question Log</label>
    <nameField>
        <displayFormat>QL-{0000}</displayFormat>
        <label>Question Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>