force-app/main/default/objects/Question_Log__c/fields/Actual_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Close_Date__c</fullName>
    <description>Closing date of Question Log</description>
    <formula>IF(ISPICKVAL(Status__c, &quot;Closed&quot;), 
TODAY(),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Close Date</label>
    <type>Date</type>
</CustomField>