force-app/main/default/objects/Question_Log__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User responsible to answer the Question Log</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Question_Logs2</relationshipName>
    <type>Lookup</type>
</CustomField>