force-app/main/default/objects/Question_Log__c/fields/Capability__c.field-meta.xml
<CustomField>
    <fullName>Capability__c</fullName>
    <description>Related request&#39;s capability name</description>
    <formula>Request__r.Capability__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capability</label>
    <type>Text</type>
</CustomField>