force-app/main/default/objects/Question_Log__c/fields/Date_Reported__c.field-meta.xml
<CustomField>
    <fullName>Date_Reported__c</fullName>
    <description>Date of Question Log Creation.</description>
    <label>Date Reported</label>
    <type>Date</type>
</CustomField>