force-app/main/default/objects/Question_Log__c/fields/Date_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Date_Resolved__c</fullName>
    <description>Date of Question Log resolved.</description>
    <label>Date Resolved</label>
    <type>Date</type>
</CustomField>