force-app/main/default/objects/Question_Log__c/fields/Expected_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Close_Date__c</fullName>
    <description>Expected Closing Date for Question Log.</description>
    <label>Expected Close Date</label>
    <type>Date</type>
</CustomField>