force-app/main/default/objects/Question_Log__c/fields/Is_Value_Delivery_Question__c.field-meta.xml
<CustomField>
    <fullName>Is_Value_Delivery_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Value Delivery Question</label>
    <type>Checkbox</type>
</CustomField>