force-app/main/default/objects/Question_Log__c/fields/NS_RequestTitle__c.field-meta.xml
<CustomField>
    <fullName>NS_RequestTitle__c</fullName>
    <formula>Request__r.Request_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Title</label>
    <type>Text</type>
</CustomField>