force-app/main/default/objects/Question_Log__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related request to the question log</description>
    <label>Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>Question Log</relationshipLabel>
    <relationshipName>Question_Log</relationshipName>
    <type>Lookup</type>
</CustomField>