force-app/main/default/objects/Question_Log__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <description>Date of request of Question Log</description>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>