force-app/main/default/objects/Question_Log__c/fields/Resolution_Comments__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Comments__c</fullName>
    <description>Additional details about Question Log</description>
    <label>Resolution/Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>