force-app/main/default/objects/Question_Log__c/fields/Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Status_Indicator__c</fullName>
    <description>Displays a status as red, green or yellow ball</description>
    <formula>IMAGE(if(ISPICKVAL(Status__c ,&quot;Clarification Requested&quot;) &amp;&amp; today() - datevalue(CreatedDate) &lt; 2, &quot;/img/samples/light_green.gif&quot;,
if(ISPICKVAL(Status__c ,&quot;Clarification Requested&quot;) &amp;&amp; today() - datevalue(CreatedDate) &lt; 5, &quot;/img/samples/light_yellow.gif&quot;,&quot;/img/samples/light_red.gif&quot;)),&quot;/img/samples/light_green.gif&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Indicator</label>
    <type>Text</type>
</CustomField>