force-app/main/default/objects/Question_Log__c/fields/Sub_Capability__c.field-meta.xml
<CustomField>
    <fullName>Sub_Capability__c</fullName>
    <label>Sub-Capability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Account Hierarchy</fullName>
            </value>
            <value>
                <fullName>Account Maintenance</fullName>
            </value>
            <value>
                <fullName>Account Ownership and Assignment</fullName>
            </value>
            <value>
                <fullName>Case Solutions</fullName>
            </value>
            <value>
                <fullName>Collaboration</fullName>
            </value>
            <value>
                <fullName>Custom Reports</fullName>
            </value>
            <value>
                <fullName>Dashboards</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Definition</fullName>
            </value>
            <value>
                <fullName>Email Marketing</fullName>
            </value>
            <value>
                <fullName>Fields</fullName>
            </value>
            <value>
                <fullName>Files and Attachments</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Knowledge Articles</fullName>
            </value>
            <value>
                <fullName>Lead Assignment</fullName>
            </value>
            <value>
                <fullName>Lead Conversion</fullName>
            </value>
            <value>
                <fullName>Lead Creation</fullName>
            </value>
            <value>
                <fullName>Lead Qualification</fullName>
            </value>
            <value>
                <fullName>Lead Source</fullName>
            </value>
            <value>
                <fullName>Lead Workflow Process</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Managing Multiple Currencies</fullName>
            </value>
            <value>
                <fullName>Ownership</fullName>
            </value>
            <value>
                <fullName>Page Layouts</fullName>
            </value>
            <value>
                <fullName>Permissions</fullName>
            </value>
            <value>
                <fullName>Pricing Book</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Product Catalog</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>