force-app/main/default/objects/Question_Log__c/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who submitted the Question Log</description>
    <label>Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Question_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>