force-app/main/default/objects/Question_Log__c/fields/Tips_and_Comments__c.field-meta.xml
<CustomField>
    <fullName>Tips_and_Comments__c</fullName>
    <label>Tips and Comments</label>
    <type>TextArea</type>
</CustomField>