force-app/main/default/objects/Question_Log__c/fields/Track__c.field-meta.xml
<CustomField>
    <fullName>Track__c</fullName>
    <description>Track of the question log</description>
    <label>Track</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Track 1</fullName>
            </value>
            <value>
                <fullName>Track 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>