force-app/main/default/objects/Question_Log__c/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Use Case</label>
    <referenceTo>Use_Case__c</referenceTo>
    <relationshipLabel>Question Log</relationshipLabel>
    <relationshipName>Question_Log</relationshipName>
    <type>Lookup</type>
</CustomField>