force-app/main/default/objects/Question_Log__c/recordTypes/SaaS_Delivery_Question_Log.recordType-meta.xml
<RecordType>
    <fullName>SaaS_Delivery_Question_Log</fullName>
    <active>true</active>
    <label>PMO Question</label>
</RecordType>