force-app/main/default/objects/Question_Log__c/recordTypes/Value_Delivery_Question_Log.recordType-meta.xml
<RecordType>
    <fullName>Value_Delivery_Question_Log</fullName>
    <active>true</active>
    <label>Value Delivery Question</label>
</RecordType>