force-app/main/default/objects/Question_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Request__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Question__c</columns>
    <columns>Capability__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>