force-app/main/default/objects/Question_Log__c/listViews/SaaS_Delivery_Question_Log.listView-meta.xml
<ListView>
    <fullName>SaaS_Delivery_Question_Log</fullName>
    <columns>NAME</columns>
    <columns>Request__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Capability__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Question_Log__c.SaaS_Delivery_Question_Log</value>
    </filters>
    <label>SaaS Delivery Question Log</label>
</ListView>