force-app/main/default/objects/Question_Log__c/listViews/Value_Delivery_Question_Log.listView-meta.xml
<ListView>
    <fullName>Value_Delivery_Question_Log</fullName>
    <columns>NAME</columns>
    <columns>Capability__c</columns>
    <columns>Domain__c</columns>
    <columns>Question__c</columns>
    <columns>Industry__c</columns>
    <columns>Scope__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Question_Log__c.Value_Delivery_Question_Log</value>
    </filters>
    <label>Value Delivery Question Log</label>
</ListView>